@@ -1,5 +1,7 @@
 Release 2.8.1 - ????
 
+   * Allow pretty printing in FileSystemEmitter (TIKA-4034).
+
 
 Release 2.8.0 - 5/9/2023
 
